--- a/package.json
+++ b/package.json
@@ -22,6 +22,11 @@
     "axios": "^0.21.1",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
-    "mongoose": "^5.9.1"
+    "mongoose": "^5.9.1",
+    "react": "^17.0.2",
+    "react-bootstrap": "^1.6.1",
+    "react-dom": "^17.0.2",
+    "react-facebook-login": "^4.1.1",
+    "react-router-dom": "^5.2.0"
   }
 }
